# open5gs

configs/open5gs/sidf/: meson.build
